--- a/config/locales/it.yml
+++ b/config/locales/it.yml
@@ -152,8 +152,8 @@ it:
     share error: "Scusa, c'è stato un errore nel condividere il tuo messaggio. Riprova per favore."
     share: 
         request: 
-            no_twitter_connection: "You don't have a connected Twitter account. Please connect your account on the settings page."
-            no_facebook_connection: "You don't have a connected Facebook account. Please connect your account on the settings page."
+            no_twitter_connection: "Non hai un account Twitter collegato. Collega il tuo account sulla pagina impostazioni."
+            no_facebook_connection: "Non hai un account Facebook collegato. Collega il tuo account sulla pagina impostazioni."
     google plus: "Google+"
     connect to: "Collegati al tuo account %{connection}"
     deleted connection: "Il collegamento con %{connection} è stato rimosso con successo."
@@ -990,7 +990,7 @@ it:
         h3: "YouVersion è Globale"
         h3 sub: "Disponibile in più di %{language_count}lingue in tutto il mondo."
         main: "Decine di milioni di persone stanno usando l'App Bibbia™ per rendere la Parola di Dio parte della loro vita quotidiana. Scarica l'app gratuita e accedi ai tuoi segnalibri, note e piani di lettura ovunque. Avrai a disposizione centinaia di versioni, alcune con audio, sul tuo dispositivo mobile."
-        button h4: "Go to Bible.com/app<br>on your Mobile Device"
+        button h4: "Vai a Bible.com/app<br>sul tuo Dispositivo Mobile"
         download now: "Scarica l'App Bibbia Adesso"
         what people: "Quello che dice la gente a proposito dell'App Bibbia gratuita..."
         t1: "Ho sempre la Parola con me."
